--- a/rooms.html
+++ b/rooms.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Rooms - Back of the Moon Guesthouse</title>
+        <link rel="icon" href="assets/backofthemoonLogo.png" type="image/png">
+
     <style>
         * {
             margin: 0;
@@ -417,7 +419,7 @@
     
     <!-- Navigation -->
     <nav>
-        <div class="logo">Back of the Moon</div>
+        <div class="logo"><a><img src="assets/backofthemoonLogo.png" height="90" width="90"></a></div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="#rooms">Rooms</a></li>
