--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Back of the Moon Guesthouse - Your Celestial Retreat</title>
+    <link rel="icon" href="assets/backofthemoonLogo.png" type="image/png">
     <style>
         * {
             margin: 0;
@@ -411,7 +412,7 @@
     
     <!-- Navigation -->
     <nav>
-        <div class="logo">Back of the Moon</div>
+        <div class="logo"><a><img src="assets/backofthemoonLogo.png" height="90" width="90"></a></div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="rooms.html">Rooms</a></li>
