--- a/index.html
+++ b/index.html
@@ -453,10 +453,10 @@
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#rooms">Rooms</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <!--<li><a href="#rooms">Rooms</a></li>-->
+                    <!--<li><a href="#gallery">Gallery</a></li>-->
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
