--- a/about.html
+++ b/about.html
@@ -522,7 +522,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <h1>Back of the Moon</h1>
+                <a><img src="assets/Back Of The Moon Logo .jpg" width="80" ></a>
             </div>
             <nav>
                 <ul>
