--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Back of the Moon Guesthouse</title>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="assets/Back Of The Moon Logo jpg"/>
     <style>
         :root {
             --navy: #0a0e2a;
@@ -601,7 +602,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <h1>Back of the Moon</h1>
+                <a><img src="assets/Back Of The Moon Logo .jpg" width="80" ></a>
             </div>
             <nav>
                 <ul>
