--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
         /* Page Header */
         .page-header {
             height: 60vh;
-            background: linear-gradient(rgba(10, 14, 42, 0.8), rgba(10, 14, 42, 0.8)), url('https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
+            background: linear-gradient(rgba(10, 14, 42, 0.8), rgba(10, 14, 42, 0.8)), url('./assets/ghome.png') no-repeat center center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
