--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
         /* Page Header */
         .page-header {
             height: 60vh;
-            background: linear-gradient(rgba(10, 14, 42, 0.8), rgba(10, 14, 42, 0.8)), url('https://images.unsplash.com/photo-1520637836862-4d197d17c30a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
+            background: linear-gradient(rgba(10, 14, 42, 0.8), rgba(10, 14, 42, 0.8)), url('./assets/bomoon.png') no-repeat center center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -555,7 +555,7 @@
                     <p>Located away from the hustle and bustle, yet accessible to all the attractions you desire, we offer the perfect balance between serenity and convenience.</p>
                 </div>
                 <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1571896349842-33c89424de2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Guesthouse exterior at night">
+                    <img src="assets/guest.png" alt="Guesthouse exterior at night">
                 </div>
             </div>
         </div>
