--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         /* Hero Section */
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(10, 14, 42, 0.7), rgba(10, 14, 42, 0.9)), url('https://images.unsplash.com/photo-1534270804882-6b5048b1c1fc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
+            background: linear-gradient(rgba(10, 14, 42, 0.7), rgba(10, 14, 42, 0.9)), url('./assets/back.png') no-repeat center center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
